--- a/styles.css
+++ b/styles.css
@@ -63,9 +63,9 @@ i {
 
 @keyframes example {
   from {
-    transform: translateY(0);
+    transform: translateX(0);
   }
   to {
-    transform: translatey(5px);
+    transform: translateX(3px);
   }
 }
